2004-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc, Fish.h, SFtp.cc, SFtp.h: don't sent password several times,
	  as it most probably is incorrect.
	* CmdExec.h, parsecmd.cc: (quotable, is_space, is_quote) add utility
	  functions; use them.
	* complete.cc: (copy_word_skip, skip_word) new functions; use them for
	  argument counting; better mirror -R completion.

2004-10-17  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fixed rare coredump when parent_mirror was referenced
	  from dtor, and it was already deleted.

2004-10-15  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: prepend ./ to file names starting with - or ~
	* FileCopy.cc, FileCopy.h: fixed upload corruption bug.

2004-10-14  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: don't chmod if not needed.
	* NetAccess.cc, NetAccess.cc: (TrySuccess) new method; optimize
	  reconnect interval calculation, add reconnect_interval_curr member.
	* Http.cc, ftpclass.cc, SFtp.cc, Fish.cc: use TrySuccess.

2004-10-04  Alexander V. Lukyanov <lav@yars.free.net>

	* complete.cc: rough mirror -R handling.

2004-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: don't send empty Cache-Control.

2004-09-22  Alexander V. Lukyanov <lav@yars.free.net>

	* CatJob.cc: use ascii mode only for tty output by default.

2004-09-16  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: fix endless loop in FileCopyPeerFDStream.
	* ftpclass.cc: don't apply ftp:port-ipv4 to FXP.

2004-09-13  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: fix a core dump in FXP mode.

2004-09-09  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc, SFtp.cc: fix FreeBSD sshd interaction (different password
	  prompt).

2004-09-06  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: reduce number of left over tasks after cleaning due to
	  Luke Macken modifications.

2004-09-06  Luke Macken <lewk@csh.rit.edu>
